Ventas y Arriendo - administracion

--- a/Contacto.html
+++ b/Contacto.html
@@ -32,10 +32,10 @@
 	        	<div class="collapse navbar-collapse" id="navbarCollapse">
 	          		<ul id="menu" class="navbar-nav mr-auto">
 		            	<li>
-		              		<a class="nav-link" href="#">Ventas <span class="sr-only">(current)</span></a>
+		              		<a class="nav-link" href="ventas.html">Ventas <span class="sr-only">(current)</span></a>
 		            	</li>
 		            	<li>
-		              		<a class="nav-link" href="#">Arriendos</a>
+		              		<a class="nav-link" href="arriendos.html">Arriendos</a>
 		            	</li>
 		            	<li class="menu_active">
 		              		<a class="nav-link" href="contacto.html">Contáctenos</a>
@@ -52,15 +52,15 @@
 	                            <h3 class="maintitle"><span><i class="fa fa-envelope"></i> Envíanos un mensaje</span></h3>
 							<div  class="wrapper">
 								<label for="nombre_completo">Nombre:</label>
-								<input type="text" class="form-control" placeholder="Nombre y Apellidos" id="nombre_completo">
+								<input type="text" class="form-control" placeholder="Nombre y Apellidos" id="nombre_completo" name="nombre_completo">
 							</div>
 							<div  class="wrapper">
 								<label for="correo_electronico">E-mail:</label>
-								<input type="text" class="form-control" id="correo_electronico">
+								<input type="text" class="form-control" id="correo_electronico" name="correo_electronico">
 							</div>
 							<div  class=" wrapper textarea_box">
 								<label for="mensaje">Mensaje:</label>
-								<textarea class="form-control" id="mensaje" placeholder="Escribe tu mensaje"></textarea>
+								<textarea class="form-control" id="mensaje" placeholder="Escribe tu mensaje" name="mensaje"></textarea>
 							</div>
 							<div  class="wrapper">
 								<div class="alert alert-danger hidden">
@@ -69,32 +69,30 @@
 				        	</div>
 							<div  class="wrapper">
 								<a href="#" class="button" id="btn_enviar" >Enviar</a>
-								<a href="#" class="button" id="btn_limpiar" onClick="document.getElementById('ContactForm').reset()">Limpiar</a>
+								<a href="#" class="button" id="btn_limpiar">Limpiar</a>
 							</div>
 						</div>				
 					</form>
 				</article>
 				<aside class="col-xs-12 col-sm-4 col-md-5 col-lg-4">
-					<form id="form_1" method="post">
+					<form id="form_busqueda" method="post">
 						<div class="pad1">
 							<h3>Buscar Propiedades</h3>
 								<label class="wrapper" for="region">Región:</label>
 								<select class="form-control" name="" id="region">
-									<option value="">&nbsp;</option>
-									<option value="09">La Araucanía</option>
-									<option value="14">Los Ríos</option>
-									<option value="10">Los Lagos</option>
-									<option value="11">Aysén del General Carlos Ibáñez del Campo</option>
 								</select>
-								<label for="comuna">Ciudad o Comuna::</label>
-								<select class="form-control" name="" id="comuna">
-									<option value="">&nbsp;</option>
-									<option value="">Opcion #1</option>
-									<option value="">Opcion #2</option>
-									<option value="">Opcion #3</option>
-									<option value="">Opcion #4</option>
-									<option value="">Opcion #5</option>
-								</select>
+								<div class="input-group">
+									<div class="cols">
+										<label class="wrapper" for="comuna">Provincia:</label>
+										<select class="form-control" name="" id="provincia">
+										</select>
+									</div>
+									<div class="cols pad_left1">
+										<label class="wrapper" for="comuna">Comuna:</label>
+										<select class="form-control" name="" id="comuna">
+										</select>
+									</div>
+								</div>
 								<label for="sector">Sector:</label>
 								<input class="form-control" type="text" id="sector">
 								<div class="input-group">
@@ -131,40 +129,28 @@
 										</select>
 									</div>
 								</div>
-									<a href="#" class="button" onClick="document.getElementById('form_1').submit()">Buscar</a> 
+						 		<a href="#" class="button" id="btn_buscar" onClick="document.getElementById('form_busqueda').submit()">Buscar</a>
 						</div>
 					</form>
 				</aside>
 			</section>
 		</div>
-		<div class="body4">
-			<footer>
-					<span class="call">Call Center: <span id="a_call_center"></span></span>
-                        <!-- <h3 class="maintitle"><span><i class="fa fa-map-marker"></i> Ubicación</span></h3> -->
-                        <span class="maintitle"><i class="fa fa-map-marker"></i> Ubicación</span>
-                        <dl>
-                            <dt><span id="a_direccion"></span></dt>
-                            <dd><span>Celular:</span><a id="a_celular"></a> Telefono:</span><a id="a_telefono"></a></dd>
-                            <dd><span>Correo electrónico:</span><a id="a_correo"></a></dd>
-                        </dl>
-
-<!--                     <div class="col-xs-12 col-sm-8 col-md-7 col-lg-8">
-                        <h3 class="maintitle"><span><i class="fa fa-map-marker"></i> Ubicación</span></h3>
-                        <dl>
-                            <dt>Ailyn 340, Puerto Montt</dt>
-                            <dd><span>Celular:</span><a id="a_celular">+56 9 99999999</a></dd>
-                            <dd><span>Correo electrónico:</span><a id="a_correo">contacto@zucasa.cl</a></dd>
-                        </dl>
-					</div>
-                    <div class="col-xs-12 col-sm-4 col-md-5 col-lg-4">
-						<span class="call">Call Center: <span>800-900-1000</span></span>
-					</div> -->
+		<div>
+			<footer id="datos_contacto" class="body4">
+<!-- 					<span class="call">Call Center: <span id="a_call_center"></span></span>
+                    <span class="maintitle"><i class="fa fa-map-marker"></i> Ubicación</span>
+                    <dl>
+                        <dt><span id="a_direccion"></span></dt>
+                        <dd><span>Celular:</span><a id="a_celular"></a> Telefono:</span><a id="a_telefono"></a></dd>
+                        <dd><span>Correo electrónico:</span><a id="a_correo"></a></dd>
+                    </dl> -->
 			</footer>
 		</div>
- <!--        <script type="text/javascript" src="js/contacto.js"></script> -->
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    	<script src="config/librerias/js/jquery-validation/dist/jquery.validate.js" type="text/javascript"></script>
         <script src="js/contacto.js" type="text/javascript"></script>
+        <script src="js/busqueda.js" type="text/javascript"></script>
 	</div>
 </body>
 </html>	
