--- a/Ventas.html
+++ b/Ventas.html
@@ -1,165 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Selling Estate</title>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/reset.css" type="text/css" media="all">
-		<link rel="stylesheet" href="css/layout.css" type="text/css" media="all">
-		<link rel="stylesheet" href="css/style.css" type="text/css" media="all">
-		<script type="text/javascript" src="js/jquery-1.6.js" ></script>
-		<script type="text/javascript" src="js/cufon-yui.js"></script>
-		<script type="text/javascript" src="js/cufon-replace.js"></script>
-		<script type="text/javascript" src="js/Didact_Gothic_400.font.js"></script>
-		<script type="text/javascript" src="js/atooltip.jquery.js"></script>
-		<script type="text/javascript" src="js/jquery.jqtransform.js" ></script>
-		<script type="text/javascript" src="js/script.js"></script>
-		<!--[if lt IE 9]>
-			<script type="text/javascript" src="js/html5.js"></script>
-			<style type="text/css">
-				.bg{ behavior: url(js/PIE.htc); }
-			</style>
-		<![endif]-->
-			<!--[if lt IE 7]>
-			<div style=' clear: both; text-align:center; position: relative;'>
-				<a href="http://www.microsoft.com/windows/internet-explorer/default.aspx?ocid=ie6_countdown_bannercode"><img src="http://www.theie6countdown.com/images/upgrade.jpg" border="0"  alt="" /></a>
-			</div>
-		<![endif]-->
-	</head>
+<head>
+		<meta charset="UTF-8">
+	    <link rel="icon" href="images/favicon.png"/>
+		<title>ZUCASA - Gestión Inmobiliaria</title>
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial_scale=1.0, minimun-scale=1.0">
+	    <link href="config/librerias/css/responsive.bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="config/librerias/css/jquery.fancybox.min.css" />
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/estilos.css">
 
-	<body id="page3">
-		<div class="body1">
-			<div class="main">
-<!-- header -->
-				<header>
-					<h1><a href="index.html" id="logo"></a></h1>
-					<div class="wrapper">
+</head>
+<body>
+	<div class="container-fliud">
+		<div class="main">
+			<header class="top-nav-bar">
+				<div class="row">
+					<h1 class=col-xs-3><a href="index.html" id="logo"></a></h1>
+					<div class="wrapper col-xs-9">
 						<ul id="icons">
-							<li><a href="#" class="normaltip" title="Facebook"><img src="images/icon1.jpg" alt=""></a></li>
-							<li><a href="#" class="normaltip" title="Twitter"><img src="images/icon2.jpg" alt=""></a></li>
-							<li><a href="#" class="normaltip" title="Linkedin"><img src="images/icon3.jpg" alt=""></a></li>
+							<li><a href="https://www.facebook.com/zucasa.cl/" title="Facebook"><img src="images/icon1.jpg"></a></li>
+							<li><a href="#" title="Twitter"><img src="images/icon2.jpg"></a></li>
+							<li><a href="https://www.instagram.com/zucasa.cl/" title="Instagram"><img src="images/icon4.png"></a></li>
 						</ul>
 					</div>
-					<nav>
-						<ul id="menu">
-							<li><a href="index.html">Main Page</a></li>
-							<li><a href="Buying.html">Buying Estate</a></li>
-							<li id="menu_active"><a href="Selling.html">Selling Estate</a></li>
-							<li><a href="Renting.html">Renting Estate</a></li>
-							<li><a href="Finance.html">Finance</a></li>
-							<li class="end"><a href="Contacts.html">Contact Us</a></li>
-						</ul>
-					</nav>
-					<div class="ic">More Website Templates @ TemplateMonster.com - October 10, 2011!</div>
-				</header>
-<!-- / header -->
-			</div>
+				</div>
+			</header>
 		</div>
-<!-- content -->
+	    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+	        	<a class="navbar-brand" href="index.html"></a>
+	        	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+	          		<span class="navbar-toggler-icon"></span>
+	        	</button>
+	        	<div class="collapse navbar-collapse" id="navbarCollapse">
+	          		<ul id="menu" class="navbar-nav mr-auto">
+		            	<li class="menu_active">
+		              		<a class="nav-link" href="ventas.html">Ventas <span class="sr-only">(current)</span></a>
+		            	</li>
+		            	<li>
+		              		<a class="nav-link" href="arriendos.html">Arriendos</a>
+		            	</li>
+		            	<li>
+		              		<a class="nav-link" href="contacto.html">Contáctenos</a>
+		            	</li>
+	          		</ul>
+	        	</div>
+	    </nav>		
+
 		<div class="body2">
-			<div class="main">
-				<section id="content">
-					<div class="wrapper">
-						<article class="col1">
-							<div class="pad2">
-								<h2 class="pad_bot1 pad_top1">Home Value Estimator</h2>
-								<div class="wrapper">
-									<figure class="left marg_right1"><img src="images/page3_img1.jpg" alt=""></figure>
-									<p class="pad_bot1 color2">Vestibulum porttitor sem mattis eros posuere vitae tristique justo congue curabitur consectetur ante at arcu mollis aliquam.</p>
-									<p>Maecenas quis lacus eu tortor blandit venenatis aliquam sit amet arcu justo in commodo consectetur lacus ac ultrices cras porta dignissim turpis fermentum porttitor aenean scelerisque nunc vel turpis faucibus vestibulum aenean volutpat iaculis nunc, sed accumsan lacus imperdiet eu. Nullam a velit felis, eget luctus elit.</p>
+			<section class="main row" >
+				<article id="contenido" class="col-xs-12 col-sm-8 col-md-7 col-lg-8">
+
+		            <section id="gallery-block" class="section-padding">
+		                <div class="container">
+		                    <div id="propiedades"></div>		
+		                </div>
+		            </section>		
+		            <div id="dlg_descripcion_productos" class="modal fade" role="dialog">
+		                <div class="modal-dialog " id="modal_tamaño">
+		                    <div class="modal-content">
+		                        <div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal">&times;</button>
+		                        </div>
+		                        <div class="modal-body" >
+		                            <div id="divContenedorPropiedades" class="row" ></div>
+		                            <div id="divImagenesPropiedades" class="row" ></div>
+		                        </div>
+		                        <div class="modal-footer">
+		                            <button type="button" class="btn btn-default" data-dismiss="modal" style="color: black;">Close</button>
+		                        </div>
+		                    </div>
+		                </div>
+		            </div>
+				</article>
+				<aside class="col-xs-12 col-sm-4 col-md-5 col-lg-4">
+					<form id="form_busqueda" method="post">
+<!-- 						<div class="pad1">
+							<h3>Buscar Propiedades</h3>
+								<label class="wrapper" for="region">Región:</label>
+								<select class="form-control" name="" id="region">
+								</select>
+								<div class="input-group">
+									<div class="cols">
+										<label class="wrapper" for="comuna">Provincia:</label>
+										<select class="form-control" name="" id="provincia">
+										</select>
+									</div>
+									<div class="cols pad_left1">
+										<label class="wrapper" for="comuna">Comuna:</label>
+										<select class="form-control" name="" id="comuna">
+										</select>
+									</div>
 								</div>
-								<p>Nulla augue lorem, sodales et pharetra et, porttitor vel leo. Phasellus at mi nec sem sodales egestas et vitae enim. Praesent interdum, nulla at suscipit rhoncus, lacus ligula tristique enim, vitae suscipit quam leo non leo. Donec in metus libero, quis faucibus purus. Duis sit amet risus eros. In hac habitasse platea dictumst. Donec tellus tellus, sodales pellentesque ullamcorper euismod neque.</p>
-								<a href="#" class="button">Read more</a>
-							</div>
-						</article>
-						<article class="col2">
-							<form id="form_1" method="post">
-								<div class="pad1">
-									<h3>Find Your Property</h3>
-									<div class="row">
-										City &amp; State, or Zip:<br>
-										<input type="text" class="input">
+								<label for="sector">Sector:</label>
+								<input class="form-control" type="text" id="sector">
+								<div class="input-group">
+									<div class="cols">
+										<label for="precio_desde">Rango Precios::</label>
+										<input class="form-control" type="text" id="precio_desde">
 									</div>
-									<div class="row_select">
-										Search Area:<br>
-										<select><option>&nbsp;</option><option>...</option><option>...</option></select>
+									<div class="cols pad_left1">
+										<label for="precio_hasta">Hasta:</label>
+										<input class="form-control" type="text" id="precio_hasta">
 									</div>
-									<div class="row_select">
-										<div class="cols">
-											Price Range:<br>
-											<select><option>&nbsp;</option><option>...</option><option>...</option></select>
-										</div>
-										<div class="cols pad_left1">
-											to:<br>
-											<select><option>&nbsp;</option><option>...</option><option>...</option></select>
-										</div>
-									</div>
-									<div class="row_select">
-										<div class="cols">
-											Bedroom(s):<br>
-											<select><option>&nbsp;</option><option>...</option><option>...</option></select>
-										</div>
-										<div class="cols pad_left1">
-											Bathroom(s):<br>
-											<select><option>&nbsp;</option><option>...</option><option>...</option></select>
-										</div>
-									</div>
-									<div class="row_select pad_bot1">
-										<div class="cols">
-											Radius:<br>
-											<select><option>&nbsp;</option><option>...</option><option>...</option></select>
-										</div>
-										<div class="cols pad_left1">
-											<a href="#" class="button" onClick="document.getElementById('form_1').submit()">Proposals</a>
-										</div>
-									</div>
-									Know exactly what you want?<br>
-									Try our <a href="#">Advanced Search</a>
 								</div>
-							</form>
-						</article>
-					</div>
-					<div class="wrapper">
-						<article class="col1">
-							<div class="pad2">
-								<h2 class="pad_bot1">Mortgage Center</h2>
-								<p class="color2">Nam in dolor eget dolor ultricies dapibus non nec nisl. Nunc interdum convallis est in dictum. Mauris elementum dapibus tortor, et posuere libero vulputate quis. Nam imperdiet, mi in mollis adipiscing, leo massa tincidunt augue, id semper nunc nulla in neque egestas neque ut risus venenatis eget aliquet.</p>
-								<div class="wrapper">
-									<figure class="left marg_right1"><img src="images/page3_img2.jpg" alt=""></figure>
-									<p>Integer dui leo, dignissim ut interdum ac, ultricies a risus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus<br>
-									mus. Curabitur dignissim nunc sit amet odio pharetra hendrerit. Nulla<br>
-									justo ante, posuere sed hendrerit et, lacinia ultricies ligula. Integer ac<br>
-									lacus vel massa venenatis suscipit in vel nulla. Donec quis placerat erat. Nam id lectus at lacus ullamcorper viverra. Mauris lacinia rutrum purus<br>
-									quis pretium.</p>
-							  </div>
-								<p>Pellentesque in tortor quam. Quisque et risus dolor, in consequat nunc. Vivamus sagittis consectetur nisi eget luctus. Maecenas pellentesque placerat dui in iaculis. Aenean sit amet felis risus.</p>
-								<a href="#" class="button">Read more</a>
-							</div>
-						</article>
-						<article class="col2">
-							<div class="pad1">
-								<h3>Find Sales</h3>
-								<p><strong>Vestibulum imperdiet ante sit amet tortor pellentesque volutpat. Phasellus lobortis mauris id ligula convallis non imperdiet magna adipiscing. In odio ante, accumsan id convallis ac arcu. </strong></p>
-								<p>Sed dapibus mi sit amet justo faucibus nec porttitor magna feugiat. Sed vulputate consequat bibendum. Curabitur mollis posuere lectus, quis mattis libero dictum vitae. Curabitur sollicitudin, purus in fringilla lobortis, lacus nulla faucibus ipsum, porta.</p>
-								<a href="#" class="button">Read more</a>
-							</div>
-						</article>
-					</div>
-				</section>
-			</div>
+								<div class="input-group">
+									<div class="cols">
+										<label for="dormitorio">Dormitorio(s):</label>
+										<select class="form-control" name="" id="dormitorio">
+											<option value="">&nbsp;</option>
+											<option value="">1</option>
+											<option value="">2</option>
+											<option value="">3</option>
+											<option value="">4</option>
+											<option value="">5</option>
+											<option value="">Más de 5</option>
+										</select>
+									</div>
+									<div class="cols pad_left1">
+										<label for="banio">Baño(s):</label>
+										<select class="form-control" name="" id="banio">
+											<option value="">&nbsp;</option>
+											<option value="">1</option>
+											<option value="">2</option>
+											<option value="">3</option>
+											<option value="">Más de 3</option>
+										</select>
+									</div>
+								</div>
+						 		<a href="#" class="button" id="btn_buscar" onClick="document.getElementById('form_busqueda').submit()">Buscar</a>
+						</div> -->
+					</form>
+				</aside>
+			</section>
 		</div>
-<!-- / content -->
-		<div class="body4">
-			<div class="main">
-<!-- footer -->
-				<footer>
-					<span class="call">Call Center: <span>1-800-567-8934</span></span>
-					Website template designed by <a href="http://www.templatemonster.com/" target="_blank" rel="nofollow">www.templatemonster.com</a><br>
-					3D Models provided by <a href="http://www.templates.com/product/3d-models/" target="_blank" rel="nofollow">www.templates.com</a>
-					<!-- {%FOOTER_LINK} -->
-				</footer>
-<!-- / footer -->
-			</div>
+		<div>
+			<footer id="datos_contacto" class="body4">
+			</footer>
 		</div>
-		<script type="text/javascript"> Cufon.now(); </script>
-	</body>
-</html>
+        <script src="js/jquery.min.js" type="text/javascript"></script>
+        <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    	<script src="config/librerias/js/jquery-validation/dist/jquery.validate.js" type="text/javascript"></script>
+		<script src="config/librerias/js/jquery.fancybox.min.js"></script>
+        <script src="js/ventas.js" type="text/javascript"></script>
+        <script src="js/busqueda.js" type="text/javascript"></script>
+	</div>
+</body>
+</html>	
